# bp

./: .pre-commit-config.yaml  Dockerfile  Makefile  pyproject.toml  pyrightconfig.json.example
compose/: app.yaml
k8s/app/: deployment.yaml  service.yaml
src/: db.sqlite3  manage.py
src/common/: models.py  schemes.py
src/config/: settings.py  urls.py
src/oauth/: controllers.py  views.py
